// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildEsQuery should generate correct es query for rule with multiple metrics 1`] = `undefined`;

exports[`buildEsQuery should generate correct es query for rule with optional filer, count filter and WITHOUT group by 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "bool": Object {
          "filter": Array [
            Object {
              "bool": Object {
                "minimum_should_match": 1,
                "should": Array [
                  Object {
                    "match": Object {
                      "optionalFilter": "container-1",
                    },
                  },
                ],
              },
            },
            Object {
              "bool": Object {
                "minimum_should_match": 1,
                "should": Array [
                  Object {
                    "bool": Object {
                      "minimum_should_match": 1,
                      "should": Array [
                        Object {
                          "match": Object {
                            "host.name": "host-1",
                          },
                        },
                      ],
                    },
                  },
                  Object {
                    "bool": Object {
                      "minimum_should_match": 1,
                      "should": Array [
                        Object {
                          "match": Object {
                            "host.name": "host-2",
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          ],
        },
      },
    ],
    "must": Array [],
    "must_not": Array [],
    "should": Array [],
  },
}
`;

exports[`buildEsQuery should generate correct es query for rule with optional filer, count filter and group by 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "bool": Object {
          "filter": Array [
            Object {
              "bool": Object {
                "minimum_should_match": 1,
                "should": Array [
                  Object {
                    "match": Object {
                      "optionalFilter": "container-1",
                    },
                  },
                ],
              },
            },
            Object {
              "bool": Object {
                "minimum_should_match": 1,
                "should": Array [
                  Object {
                    "bool": Object {
                      "minimum_should_match": 1,
                      "should": Array [
                        Object {
                          "match": Object {
                            "host.name": "host-1",
                          },
                        },
                      ],
                    },
                  },
                  Object {
                    "bool": Object {
                      "minimum_should_match": 1,
                      "should": Array [
                        Object {
                          "match": Object {
                            "host.name": "host-2",
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          ],
        },
      },
      Object {
        "match_phrase": Object {
          "groupByField": "groupByValue",
        },
      },
    ],
    "must": Array [],
    "must_not": Array [],
    "should": Array [],
  },
}
`;

exports[`buildEsQuery should generate correct es query for rule with optional filer, count filter and multiple group by 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "bool": Object {
          "filter": Array [
            Object {
              "bool": Object {
                "minimum_should_match": 1,
                "should": Array [
                  Object {
                    "match": Object {
                      "optionalFilter": "container-1",
                    },
                  },
                ],
              },
            },
            Object {
              "bool": Object {
                "minimum_should_match": 1,
                "should": Array [
                  Object {
                    "bool": Object {
                      "minimum_should_match": 1,
                      "should": Array [
                        Object {
                          "match": Object {
                            "host.name": "host-1",
                          },
                        },
                      ],
                    },
                  },
                  Object {
                    "bool": Object {
                      "minimum_should_match": 1,
                      "should": Array [
                        Object {
                          "match": Object {
                            "host.name": "host-2",
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          ],
        },
      },
      Object {
        "match_phrase": Object {
          "groupByField": "groupByValue",
        },
      },
      Object {
        "match_phrase": Object {
          "secondGroupByField": "secondGroupByValue",
        },
      },
    ],
    "must": Array [],
    "must_not": Array [],
    "should": Array [],
  },
}
`;

exports[`buildEsQuery should generate correct es query for rule without filter and with group by 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "match_phrase": Object {
          "groupByField": "groupByValue",
        },
      },
    ],
    "must": Array [],
    "must_not": Array [],
    "should": Array [],
  },
}
`;
